# efl

./: AUTHORS  meson.build
data/elementary/themes/: default.edc  ic.edc
data/elementary/themes/edc/: clipboard.edc  fileman.edc
data/elementary/themes/edc/elm/: border.edc  entry.edc
header_checks/: meson.build
src/lib/ecore_con/: efl_net_dialer_http.c  efl_net_server_fd.c
src/lib/ecore_drm2/: Ecore_Drm2.h  ecore_drm2.c  ecore_drm2_connectors.c  ecore_drm2_crtcs.c  ecore_drm2_device.c  ecore_drm2_displays.c  ecore_drm2_fb.c  ecore_drm2_planes.c  ecore_drm2_private.h  meson.build
src/lib/ecore_evas/: Ecore_Evas.h  ecore_evas.c  ecore_evas_deprecated.c  ecore_evas_module.c
src/lib/ecore_fb/: meson.build
src/lib/ecore_x/: Ecore_X.h  ecore_x.c  ecore_x_error.c  ecore_x_selection.c
src/lib/edje/: edje_cache.c  edje_entry.c  edje_load.c
src/lib/eet/: eet_lib.c
src/lib/eeze/: eeze_udev_syspath.c  meson.build
src/lib/efreet/: efreet_desktop.c
src/lib/eina/: eina_debug_bt.c
src/lib/elementary/: efl_ui_position_manager_grid.c  efl_ui_position_manager_list.c  efl_ui_win.c  elm_cnp.c  elm_config.c  elm_entry.c  elm_entry_legacy.h  elm_icon.c  elm_priv.h  elm_widget_entry.h  elm_win.h  els_tooltip.c  meson.build
src/lib/evas/file/: evas_module.c
src/lib/evil/: evil_time.c
src/modules/ecore_buffer/: meson.build
src/modules/evas/engines/: meson.build
src/modules/evas/engines/drm/: Evas_Engine_Drm.h  evas_drm_swapper.c  evas_engine.c  evas_engine.h  evas_outbuf.c  meson.build
src/tests/evas/: evas_test_render_engines.c
(+8 files in other folders)
